third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/array/text-in-array.stderr
TOML parse error at line 3, column 3
  |
3 |   I don't belong,
  |   ^
invalid array
expected `]`
